Modified grid search to be threaded.  Started adding structured stuff