@@ -12,7 +12,6 @@ import ark.data.feature.FeaturizedDataSet;
 import ark.model.SupervisedModel;
 import ark.model.evaluation.metric.ClassificationEvaluation;
 import ark.util.OutputWriter;
-import ark.util.Pair;
 
 public class GridSearchTestValidation<D extends Datum<L>, L> {
 	private String name;
@@ -24,8 +23,8 @@ public class GridSearchTestValidation<D extends Datum<L>, L> {
 	private Map<String, List<String>> possibleParameterValues; 
 	private List<ClassificationEvaluation<D, L>> evaluations;
 	private DecimalFormat cleanDouble;
-	private List<Pair<GridSearch.GridPosition, Double>> gridEvaluation;
-	private GridSearch.GridPosition bestGridPosition;
+	private List<GridSearch<D, L>.EvaluatedGridPosition> gridEvaluation;
+	private GridSearch<D,L>.EvaluatedGridPosition bestGridPosition;
 	private boolean trainOnDev;
 	
 	public GridSearchTestValidation(String name,
@@ -42,7 +41,7 @@ public class GridSearchTestValidation<D extends Datum<L>, L> {
 		this.testData = testData;
 		this.evaluations = evaluations;
 		this.possibleParameterValues = new HashMap<String, List<String>>();
-		this.gridEvaluation = new ArrayList<Pair<GridSearch.GridPosition, Double>>();
+		this.gridEvaluation = new ArrayList<GridSearch<D, L>.EvaluatedGridPosition>();
 		this.cleanDouble = new DecimalFormat("0.00");
 		this.trainOnDev = trainOnDev;
 	}
@@ -61,6 +60,10 @@ public class GridSearchTestValidation<D extends Datum<L>, L> {
 	}
 	
 	public List<Double> run(Datum.Tools.TokenSpanExtractor<D, L> errorExampleExtractor, boolean outputResults) {
+		return run(errorExampleExtractor, outputResults, 1);
+	}
+	
+	public List<Double> run(Datum.Tools.TokenSpanExtractor<D, L> errorExampleExtractor, boolean outputResults, int maxThreads) {
 		OutputWriter output = this.trainData.getDatumTools().getDataTools().getOutputWriter();
 		
 		if (this.possibleParameterValues.size() > 0) {
@@ -78,49 +81,62 @@ public class GridSearchTestValidation<D extends Datum<L>, L> {
 			if (this.bestGridPosition != null)
 				this.model.setHyperParameterValues(this.bestGridPosition.getCoordinates(), this.trainData.getDatumTools());
 		}
-
-		if (this.trainOnDev)
-			this.trainData.addAll(this.devData);
 			
 		output.debugWriteln("Training model with best parameters (" + this.name + ")");
 
-		TrainTestValidation<D, L> accuracy = new TrainTestValidation<D, L>(this.name, this.model, this.trainData, this.testData, this.evaluations);
-		List<Double> evaluationValues = accuracy.run();
-		if (evaluationValues.get(0) < 0) {
-			output.debugWriteln("Error: Validation failed (" + this.name + ")");
-			return null;
-		} else {
+		List<Double> evaluationValues = null;
+		if (this.testData != null) {
+			if (this.trainOnDev)
+				this.trainData.addAll(this.devData);
+	
+			TrainTestValidation<D, L> accuracy = new TrainTestValidation<D, L>(this.name, this.model, this.trainData, this.testData, this.evaluations);
+			evaluationValues = accuracy.run();
+			if (evaluationValues.get(0) < 0) {
+				output.debugWriteln("Error: Validation failed (" + this.name + ")");
+				return null;
+			} 
+			
 			this.confusionMatrix = accuracy.getConfusionMatrix();
-			
 			output.debugWriteln("Test " + this.evaluations.get(0).toString() + " (" + this.name + ": " + cleanDouble.format(evaluationValues.get(0)));
-			output.dataWriteln(this.confusionMatrix.getActualToPredictedDescription(errorExampleExtractor));
-			output.modelWriteln(this.model.toString());
-			
-			if (outputResults) {
-				if (this.bestGridPosition != null) {
-					Map<String, String> parameters = this.bestGridPosition.getCoordinates();
-					output.resultsWriteln("Best parameters from grid search:");
-					for (Entry<String, String> entry : parameters.entrySet())
-						output.resultsWriteln(entry.getKey() + ": " + entry.getValue());
-				}
-				
-				output.resultsWriteln("\nTest set evaluation results:");
-				for (int i = 0; i < this.evaluations.size(); i++)
-					output.resultsWriteln(this.evaluations.get(i).toString() + ": " + evaluationValues.get(i));
-				
-				output.resultsWriteln("\nConfusion matrix:\n" + this.confusionMatrix.toString());
-				
-				if (this.gridEvaluation != null && this.gridEvaluation.size() > 0) {
-					output.resultsWriteln("\nGrid search on " + this.evaluations.get(0).toString() + ":");
-					output.resultsWriteln(this.gridEvaluation.get(0).getFirst().toKeyString("\t") + "\t" + this.evaluations.get(0).toString());
-					for (Pair<GridSearch.GridPosition, Double> gridPosition : this.gridEvaluation) {
-						output.resultsWriteln(gridPosition.getFirst().toValueString("\t") + "\t" + gridPosition.getSecond());
-					}
-				}
+		} else {
+			evaluationValues = this.bestGridPosition.getValidation().getResults();
+			this.confusionMatrix = this.bestGridPosition.getValidation().getConfusionMatrix();
+			output.debugWriteln("Dev best " + this.evaluations.get(0).toString() + " (" + this.name + ": " + cleanDouble.format(evaluationValues.get(0)));
+			this.model = this.bestGridPosition.getValidation().getModel();
+		}
+		
+		output.dataWriteln(this.confusionMatrix.getActualToPredictedDescription(errorExampleExtractor));
+		output.modelWriteln(this.model.toString());
+		
+		if (outputResults) {
+			if (this.bestGridPosition != null) {
+				Map<String, String> parameters = this.bestGridPosition.getCoordinates();
+				output.resultsWriteln("Best parameters from grid search:");
+				for (Entry<String, String> entry : parameters.entrySet())
+					output.resultsWriteln(entry.getKey() + ": " + entry.getValue());
 			}
 			
-			return evaluationValues;
+			if (this.testData != null) {
+				output.resultsWriteln("\nTest set evaluation results: ");
+			} else {
+				output.resultsWriteln("\nDev set best evaluation results: ");
+			}
+			
+			for (int i = 0; i < this.evaluations.size(); i++)
+				output.resultsWriteln(this.evaluations.get(i).toString() + ": " + evaluationValues.get(i));
+			
+			output.resultsWriteln("\nConfusion matrix:\n" + this.confusionMatrix.toString());
+			
+			if (this.gridEvaluation != null && this.gridEvaluation.size() > 0) {
+				output.resultsWriteln("\nGrid search on " + this.evaluations.get(0).toString() + ":");
+				output.resultsWriteln(this.gridEvaluation.get(0).toKeyString("\t") + "\t" + this.evaluations.get(0).toString());
+				for (GridSearch<D, L>.EvaluatedGridPosition gridPosition : this.gridEvaluation) {
+					output.resultsWriteln(gridPosition.toValueString("\t") + "\t" + gridPosition.getPositionValue());
+				}
+			}
 		}
+		
+		return evaluationValues;
 	}
 	
 	public List<ClassificationEvaluation<D, L>> getEvaluations() {
@@ -131,11 +147,11 @@ public class GridSearchTestValidation<D extends Datum<L>, L> {
 		return this.confusionMatrix;
 	}
 	
-	public List<Pair<GridSearch.GridPosition, Double>> getGridEvaluation() {
+	public List<GridSearch<D, L>.EvaluatedGridPosition> getGridEvaluation() {
 		return this.gridEvaluation;
 	}
 	
-	public GridSearch.GridPosition getBestGridPosition() {
+	public GridSearch<D, L>.EvaluatedGridPosition getBestGridPosition() {
 		return this.bestGridPosition;
 	}
 }
